[gd_scene load_steps=57 format=3 uid="uid://cpq1ryhf5gapg"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_8i3u7"]
[ext_resource type="Texture2D" uid="uid://coi7fl3i2gleo" path="res://sprites/characters/player.png" id="1_neibe"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5p08a"]
radius = 3.5
height = 8.0

[sub_resource type="AtlasTexture" id="AtlasTexture_fe0gy"]
atlas = ExtResource("1_neibe")
region = Rect2(0, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3waab"]
atlas = ExtResource("1_neibe")
region = Rect2(48, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qjyq6"]
atlas = ExtResource("1_neibe")
region = Rect2(96, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_r33q5"]
atlas = ExtResource("1_neibe")
region = Rect2(144, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kgl2r"]
atlas = ExtResource("1_neibe")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8fagp"]
atlas = ExtResource("1_neibe")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_re0wv"]
atlas = ExtResource("1_neibe")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_g5q4d"]
atlas = ExtResource("1_neibe")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rek22"]
atlas = ExtResource("1_neibe")
region = Rect2(192, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_u5fdw"]
atlas = ExtResource("1_neibe")
region = Rect2(240, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_okmfi"]
atlas = ExtResource("1_neibe")
region = Rect2(0, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5qke4"]
atlas = ExtResource("1_neibe")
region = Rect2(48, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jpcvl"]
atlas = ExtResource("1_neibe")
region = Rect2(96, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_g67ev"]
atlas = ExtResource("1_neibe")
region = Rect2(144, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_eat4n"]
atlas = ExtResource("1_neibe")
region = Rect2(192, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xs17k"]
atlas = ExtResource("1_neibe")
region = Rect2(240, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_58law"]
atlas = ExtResource("1_neibe")
region = Rect2(0, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_emct6"]
atlas = ExtResource("1_neibe")
region = Rect2(48, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_axf3p"]
atlas = ExtResource("1_neibe")
region = Rect2(96, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_w7uev"]
atlas = ExtResource("1_neibe")
region = Rect2(0, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_yldbi"]
atlas = ExtResource("1_neibe")
region = Rect2(48, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_iawvp"]
atlas = ExtResource("1_neibe")
region = Rect2(96, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_oeutx"]
atlas = ExtResource("1_neibe")
region = Rect2(144, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5r38w"]
atlas = ExtResource("1_neibe")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qwc66"]
atlas = ExtResource("1_neibe")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ppbkq"]
atlas = ExtResource("1_neibe")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2iqvn"]
atlas = ExtResource("1_neibe")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4bbyr"]
atlas = ExtResource("1_neibe")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bram8"]
atlas = ExtResource("1_neibe")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2osa5"]
atlas = ExtResource("1_neibe")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_uwc3v"]
atlas = ExtResource("1_neibe")
region = Rect2(48, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kojwn"]
atlas = ExtResource("1_neibe")
region = Rect2(96, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ycv16"]
atlas = ExtResource("1_neibe")
region = Rect2(144, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xy060"]
atlas = ExtResource("1_neibe")
region = Rect2(192, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1xtd"]
atlas = ExtResource("1_neibe")
region = Rect2(240, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5gsso"]
atlas = ExtResource("1_neibe")
region = Rect2(0, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_a6fwn"]
atlas = ExtResource("1_neibe")
region = Rect2(48, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xsxra"]
atlas = ExtResource("1_neibe")
region = Rect2(96, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ucif0"]
atlas = ExtResource("1_neibe")
region = Rect2(144, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_slcnl"]
atlas = ExtResource("1_neibe")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_j5k5w"]
atlas = ExtResource("1_neibe")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wr58n"]
atlas = ExtResource("1_neibe")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6ggj"]
atlas = ExtResource("1_neibe")
region = Rect2(144, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jd3cr"]
atlas = ExtResource("1_neibe")
region = Rect2(192, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_u7spa"]
atlas = ExtResource("1_neibe")
region = Rect2(240, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jcqdk"]
atlas = ExtResource("1_neibe")
region = Rect2(0, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_27cqm"]
atlas = ExtResource("1_neibe")
region = Rect2(48, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nbpcr"]
atlas = ExtResource("1_neibe")
region = Rect2(96, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fj2qn"]
atlas = ExtResource("1_neibe")
region = Rect2(144, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ryxjr"]
atlas = ExtResource("1_neibe")
region = Rect2(192, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lvdg8"]
atlas = ExtResource("1_neibe")
region = Rect2(240, 192, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_phbnr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fe0gy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3waab")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qjyq6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r33q5")
}],
"loop": true,
"name": &"back_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kgl2r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8fagp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_re0wv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g5q4d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rek22")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u5fdw")
}],
"loop": true,
"name": &"back_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_okmfi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5qke4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jpcvl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g67ev")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eat4n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xs17k")
}],
"loop": true,
"name": &"back_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_58law")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_emct6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_axf3p")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w7uev")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yldbi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iawvp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oeutx")
}],
"loop": true,
"name": &"front_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5r38w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qwc66")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ppbkq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2iqvn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4bbyr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bram8")
}],
"loop": true,
"name": &"front_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2osa5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uwc3v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kojwn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ycv16")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xy060")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1xtd")
}],
"loop": true,
"name": &"front_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5gsso")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a6fwn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xsxra")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ucif0")
}],
"loop": true,
"name": &"side_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_slcnl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5k5w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wr58n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6ggj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jd3cr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u7spa")
}],
"loop": true,
"name": &"side_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jcqdk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_27cqm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nbpcr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fj2qn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ryxjr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lvdg8")
}],
"loop": true,
"name": &"side_walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_hu45h"]

[node name="player" type="CharacterBody2D"]
z_index = 1
y_sort_enabled = true
collision_layer = 3
collision_mask = 3
script = ExtResource("1_8i3u7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
y_sort_enabled = true
position = Vector2(0.5, -4)
shape = SubResource("CapsuleShape2D_5p08a")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
y_sort_enabled = true
position = Vector2(0, -14)
scale = Vector2(0.898437, 0.898437)
sprite_frames = SubResource("SpriteFrames_phbnr")
animation = &"front_walk"
metadata/_edit_lock_ = true

[node name="playerhitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="playerhitbox"]
position = Vector2(0, -8)
shape = SubResource("CircleShape2D_hu45h")

[node name="attack_cooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="deal_attack_timer" type="Timer" parent="."]
wait_time = 0.5

[node name="world_camera" type="Camera2D" parent="."]
zoom = Vector2(4, 4)
limit_left = 0
limit_top = 0
limit_right = 860
limit_bottom = 270
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="cliffside_camera" type="Camera2D" parent="."]
zoom = Vector2(4, 4)
limit_left = 20
limit_top = 0
limit_right = 350
limit_bottom = 320
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="healthbar" type="ProgressBar" parent="."]
modulate = Color(0.0862745, 0.760784, 0, 1)
offset_left = -6.0
offset_top = 2.0
offset_right = 124.0
offset_bottom = 29.0
scale = Vector2(0.1, 0.1)
show_percentage = false

[node name="regin_timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="body_entered" from="playerhitbox" to="." method="_on_playerhitbox_body_entered"]
[connection signal="body_exited" from="playerhitbox" to="." method="_on_playerhitbox_body_exited"]
[connection signal="timeout" from="attack_cooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="deal_attack_timer" to="." method="_on_deal_attack_timer_timeout"]
[connection signal="timeout" from="regin_timer" to="." method="_on_regin_timer_timeout"]
